Fixed [Color contrast] Web Accessibility issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,7 @@ section > a {
 
 .icon > a {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 20px;
   color: #6070ff;
   text-decoration: none;
@@ -217,11 +217,11 @@ h2 {
   background-color: #ebebfe;
   border-radius: 25%;
   margin-right: 10px;
-  padding: 5px;
+  padding: 10px;
   font-family: Poppins, sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 24px;
   line-height: 16px;
   color: #6070ff;
   list-style: none;
@@ -444,7 +444,7 @@ img.separator {
 }
 
 #contact .txt > p {
-  font-size: 20px;
+  font-size: 24px;
   line-height: 28px;
   text-align: center;
   color: #ebebff;
